--- a/Week4HW/Week4style.css
+++ b/Week4HW/Week4style.css
@@ -1,3 +1,42 @@
+body {
+  background-color: lightgray;
+}
+
+button {
+  background-color: lightblue;
+  font-size: 20px;
+}
+
+#login {
+  background-color: burlywood;
+}
+p {
+  font-size: 20px;
+}
 h1 {
   color:peru;
 }
+
+div {
+  border: 3px solid black;
+  padding: 5px;
+  margin: 15px;
+  min-height: 400px;
+}
+
+h2 {
+  background-color:burlywood;
+}
+ ul, ol {
+  background-color: lightblue;
+  font-size: 25px;
+ }
+.places {
+  color: peru;
+  font-weight: 300;
+}
+
+ footer {
+  text-align: center;
+  font-size: 10px;
+ }
